--- a/index.html
+++ b/index.html
@@ -6,23 +6,25 @@
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    <h1>Twitter</h1>
+    <header>
+      <h1>Twitter</h1>
+    </header>
     <div class="box-left">
       <h2>Reto de código</h2>
-      <p>Hola,</p>
-      <p>soy front-end developer jr.</p>
-      <hr class="">
-      <p class="text-uppercase">Código</p>
-
+      <p class="presentation">Hola,<br>
+      soy front-end developer jr.</p>
+      <p class="text-uppercase"> <strong>CODIGO</strong></p>
+    </div>
     <!--Formulario v1-->
     <form class="form-right">
       <!--Texto v1-->
-      <textarea id="tweet-box" placeholder="¿Qué está pasando?"></textarea>
+      <textarea id="tweet-box" placeholder="¿Qué estás pensando?"></textarea>
+      <hr class="line">
       <!--Button v1-->
       <button id="btn">Twittear</button>
-      <span id='characters'>140</span>
+      <span id="characters">140</span>
     </form>
-
+    
     <div id="container-tweets" class="">
     </div>
     <div id="test">
