--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -16,20 +16,21 @@
       <p class="text-uppercase"> <strong>CODIGO</strong></p>
     </div>
     <!--Formulario v1-->
-    <form class="form-right">
+    <div class="form-right">
       <!--Texto v1-->
       <textarea id="tweet-box" placeholder="¿Qué estás pensando?"></textarea>
       <hr class="line">
       <!--Button v1-->
       <button id="btn">Twittear</button>
       <span id="characters">140</span>
-    </form>
+    </div>
     
-    <div id="container-tweets" class="">
+    <div id="container-tweets">
     </div>
     <div id="test">
     </div>
-    <script type="text/javascript" src="js/app.js">
-    </script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
   </body>
 </html>
+
